--- a/_posts/0000-01-02-aig79.md
+++ b/_posts/0000-01-02-aig79.md
@@ -2,5 +2,6 @@
 layout: slide
 title: "Welcome to our second slide!"
 ---
-Hi there!
+Any day you can talk about yesterday is a good day.
+
 Use the left arrow to go back!
